--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Build Wine 11 ARM64 (Stable)
+name: Build Wine 11 ARM64 (Fixed Make Rules)
 
 on:
   push:
@@ -9,7 +9,7 @@ jobs:
   build_wine_native_arm64:
     runs-on: ubuntu-24.04
 
-    # Явно задаем URL компилятора. Никаких API запросов.
+    # Используем проверенный релиз LLVM-MinGW (Pinning version)
     env:
       LLVM_MINGW_URL: https://github.com/mstorsjo/llvm-mingw/releases/download/20240619/llvm-mingw-20240619-ucrt-ubuntu-20.04-x86_64.tar.xz
 
@@ -17,16 +17,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 1. НАСТРОЙКА РЕПОЗИТОРИЕВ (Nuclear Option)
-      # Гарантированно исправляет ошибку 404 и "Malformed entry"
+      # 1. ЧИСТАЯ НАСТРОЙКА РЕПОЗИТОРИЕВ (Nuclear Option)
       - name: Setup Multiarch & Dependencies
         run: |
           sudo dpkg --add-architecture arm64
           
-          # Удаляем мусорные конфиги, которые ломают apt update
+          # Удаляем конфликтующие репозитории
           sudo rm -rf /etc/apt/sources.list.d/*
           
-          # Перезаписываем sources.list: Azure для x86, Ports для ARM64
+          # Перезаписываем sources.list: Azure (x86) + Ports (ARM64)
           echo "deb [arch=amd64] http://azure.archive.ubuntu.com/ubuntu noble main restricted universe multiverse" | sudo tee /etc/apt/sources.list
           echo "deb [arch=amd64] http://azure.archive.ubuntu.com/ubuntu noble-updates main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
           echo "deb [arch=amd64] http://azure.archive.ubuntu.com/ubuntu noble-backports main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
@@ -39,6 +38,7 @@ jobs:
           
           sudo apt-get update
           
+          # Устанавливаем ВСЕ необходимые зависимости
           sudo apt-get install -y \
             wget curl git cmake make flex bison \
             gcc-aarch64-linux-gnu g++-aarch64-linux-gnu \
@@ -46,14 +46,15 @@ jobs:
             libxrender-dev:arm64 libxext-dev:arm64 libxi-dev:arm64 \
             libxrandr-dev:arm64 libxinerama-dev:arm64 libxcursor-dev:arm64 \
             libvulkan-dev:arm64 libwayland-dev:arm64 libxkbcommon-dev:arm64 \
-            libsdl2-dev:arm64 libudev-dev:arm64 libgstreamer1.0-dev:arm64
+            libsdl2-dev:arm64 libudev-dev:arm64 libgstreamer1.0-dev:arm64 \
+            libgnutls28-dev:arm64 libpcap-dev:arm64 libpulse-dev:arm64 \
+            libdbus-1-dev:arm64 libfontconfig1-dev:arm64
 
-      # 2. Установка LLVM-MinGW (Стабильная версия)
+      # 2. Установка LLVM-MinGW
       - name: Setup LLVM MinGW
         run: |
           wget -q "$LLVM_MINGW_URL" -O llvm-mingw.tar.xz
           tar xf llvm-mingw.tar.xz
-          # Динамическое определение имени папки, чтобы не зависеть от версии в имени
           EXTRACTED_DIR=$(tar -tf llvm-mingw.tar.xz | head -1 | cut -f1 -d"/")
           mv "$EXTRACTED_DIR" llvm-mingw
           echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
@@ -61,13 +62,20 @@ jobs:
       - name: Clone Wine Source
         run: git clone --depth 1 https://gitlab.winehq.org/wine/wine.git wine-src
 
-      # 3. Сборка инструментов (Host x64)
+      # 3. Сборка инструментов (Host x64) — ИСПРАВЛЕНО
+      # Мы собираем только 'tools' и базовые 'include'. Не требуем x11drv_idl.h явно.
       - name: Build Wine Tools (Host x64)
         run: |
           mkdir wine-tools
           cd wine-tools
-          ../wine-src/configure --enable-win64 --without-x --without-freetype
-          make -j$(nproc) tools include/x11drv_idl.h include/waylanddrv_client_protocol.h
+          
+          # Конфигурируем минимальный билд. --without-x здесь НОРМАЛЬНО, так как это тулзы.
+          ../wine-src/configure --enable-win64 --without-x --without-freetype --without-wayland --without-vulkan
+          
+          # Собираем только инструменты (widl, wrc, make_xftmpl и т.д.)
+          make -j$(nproc) tools
+          
+          # Этого достаточно, чтобы основной билд мог генерировать свои заголовки
 
       # 4. Конфигурация Target (ARM64)
       - name: Configure Wine (Target ARM64)
@@ -79,6 +87,7 @@ jobs:
           export CROSSCFLAGS="-O3 -mcpu=cortex-x2 -mtune=cortex-x2 -g0 -mstrict-align -Wno-error"
           export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
           
+          # ВАЖНО: Здесь мы ВКЛЮЧАЕМ (--with) все графические подсистемы
           ../wine-src/configure \
             --host=aarch64-linux-gnu \
             --enable-win64 \
@@ -90,6 +99,7 @@ jobs:
             --with-x \
             --with-wayland \
             --with-vulkan \
+            --with-freetype \
             --without-gstreamer \
             --without-cups \
             --without-sane \
@@ -117,7 +127,7 @@ jobs:
             "version": "11.0-git",
             "arch": "arm64",
             "author": "GitHubCI",
-            "description": "Native AArch64. Cortex-X2 Optimized. Built with LLVM-MinGW 20240619."
+            "description": "Native AArch64 build. Correctly linked with X11/Wayland/Vulkan."
           }
           EOF
           
