--- a/.github/workflows/ci-arm64ec-wine.yml
+++ b/.github/workflows/ci-arm64ec-wine.yml
@@ -1,4 +1,4 @@
-name: Build Wine 11 ARM64 (Noble Fix)
+name: Build Wine 11 ARM64 (Fix make_xftmpl)
 
 on:
   push:
@@ -10,36 +10,31 @@ jobs:
     runs-on: ubuntu-24.04
 
     env:
-      # Проверенная ссылка на LLVM 21+ (или последний рабочий снапшот)
-      # Если ссылка 20251216 не сработает (т.к. она из будущего), вернемся на стабильную 20240619
-      LLVM_MINGW_URL: "https://github.com/mstorsjo/llvm-mingw/releases/download/20240619/llvm-mingw-20240619-ucrt-ubuntu-20.04-x86_64.tar.xz"
+      # Ссылка на релиз 20251216 (Future Tech)
+      LLVM_MINGW_URL: "https://github.com/mstorsjo/llvm-mingw/releases/download/20251216/llvm-mingw-20251216-ucrt-ubuntu-20.04-x86_64.tar.xz"
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 1. ЖЕСТКАЯ НАСТРОЙКА РЕПОЗИТОРИЕВ (Ubuntu 24.04 Specific)
+      # 1. ЖЕСТКАЯ НАСТРОЙКА РЕПОЗИТОРИЕВ (Noble Fix)
       - name: Setup Multiarch & Dependencies
         run: |
           sudo dpkg --add-architecture arm64
           
-          # УДАЛЯЕМ ВСЁ. Включая новый формат ubuntu.sources в Noble
+          # Очистка
           sudo rm -f /etc/apt/sources.list
           sudo rm -rf /etc/apt/sources.list.d/*
           
-          # Создаем чистый файл с нуля
-          # 1. AMD64 (Native) -> Archive/Security
+          # 1. AMD64 (Archive/Security)
           echo "deb [arch=amd64] http://archive.ubuntu.com/ubuntu noble main restricted universe multiverse" | sudo tee /etc/apt/sources.list
           echo "deb [arch=amd64] http://archive.ubuntu.com/ubuntu noble-updates main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
           echo "deb [arch=amd64] http://security.ubuntu.com/ubuntu noble-security main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
           
-          # 2. ARM64 (Foreign) -> Ports
+          # 2. ARM64 (Ports)
           echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
           echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-updates main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
           echo "deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports noble-security main restricted universe multiverse" | sudo tee -a /etc/apt/sources.list
-          
-          # Выводим конфиг для проверки
-          cat /etc/apt/sources.list
           
           sudo apt-get update
           
@@ -56,7 +51,7 @@ jobs:
             libgnutls28-dev:arm64 libpcap-dev:arm64 libpulse-dev:arm64 \
             libdbus-1-dev:arm64 libfontconfig1-dev:arm64
 
-      # 2. Установка LLVM-MinGW
+      # 2. Установка LLVM-MinGW (20251216)
       - name: Setup LLVM MinGW
         run: |
           wget -q "$LLVM_MINGW_URL" -O llvm-mingw.tar.xz
@@ -64,6 +59,9 @@ jobs:
           EXTRACTED_DIR=$(find . -maxdepth 1 -type d -name "llvm-mingw-*" | head -n 1)
           mv "$EXTRACTED_DIR" llvm-mingw
           echo "$PWD/llvm-mingw/bin" >> $GITHUB_PATH
+          
+          # Проверка (должна показать версию Clang из будущего)
+          ./llvm-mingw/bin/clang --version
 
       - name: Clone Wine Source
         run: git clone --depth 1 https://gitlab.winehq.org/wine/wine.git wine-src
@@ -75,14 +73,16 @@ jobs:
           cd wine-tools
           ../wine-src/configure --enable-win64 --without-x --without-freetype --without-wayland --without-vulkan
           
-          # Сборка полного набора
+          # === ИСПРАВЛЕНИЕ ЗДЕСЬ ===
+          # Добавлен tools/make_xftmpl
           make -j$(nproc) \
             tools/winebuild/winebuild \
             tools/widl/widl \
             tools/wrc/wrc \
             tools/wmc/wmc \
             tools/winegcc/winegcc \
-            tools/wine/wine
+            tools/wine/wine \
+            tools/make_xftmpl
 
       # 4. Конфигурация Target (ARM64)
       - name: Configure Wine (Target ARM64)
@@ -90,8 +90,7 @@ jobs:
           mkdir wine-build
           cd wine-build
           
-          # Используем стабильные флаги -O2, чтобы избежать ошибки clang code 70
-          # И правильные флаги архитектуры
+          # Флаги -O2 (безопасные для компилятора)
           export CFLAGS="-O2 -march=armv8.2-a+fp16+dotprod -fno-plt"
           export CROSSCFLAGS="-O2 -march=armv8.2-a+fp16+dotprod -g0 -mstrict-align -Wno-error"
           export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
@@ -131,11 +130,11 @@ jobs:
           
           cat <<EOF > Wine-11.0-ARM64/info.json
           {
-            "name": "Wine-11.0-ARM64-Stable",
+            "name": "Wine-11.0-ARM64-2025",
             "version": "11.0-git",
             "arch": "arm64",
             "author": "GitHubCI",
-            "description": "Native AArch64 (X11). Stable build."
+            "description": "Native AArch64 (X11). LLVM 20251216."
           }
           EOF
           
@@ -145,10 +144,10 @@ jobs:
           EOF
           chmod +x Wine-11.0-ARM64/env.sh
           
-          tar -cJf ../../wine-11-arm64.wcp Wine-11.0-ARM64
+          tar -cJf ../../wine-11-arm64-llvm2025.wcp Wine-11.0-ARM64
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wine-11-arm64.wcp
-          path: wine-11-arm64.wcp
+          name: wine-11-arm64-llvm2025.wcp
+          path: wine-11-arm64-llvm2025.wcp
